--- a/css/custom.css
+++ b/css/custom.css
@@ -919,3 +919,70 @@ input.errordesignfields, textarea.errordesignfields, select.errordesignfields { 
 .sec_adress	{margin:25px 0 0 0;}
 .sec_adress	ul { list-style:none; margin:0; padding:0; }
 .sec_adress	ul li strong { }
+
+
+
+.logo {
+  display: block;
+  text-indent: -9999px;
+  width: 280px;
+  height: 52px;
+  background: url(../img/logo_wwspree.svg);
+  background-size: 280px 52px;
+  margin:0 auto;
+  margin-top:40px;
+  margin-left:-2px;
+}
+
+.landing  {	
+	margin:0 auto;
+	margin-top:40px;	
+	width: 280px;
+}
+
+.addy {
+	margin:10px 0 0 0;
+	border:1px solid #1C1C1B;
+	padding:10px 20px;
+	line-height:18px;
+	color:#1C1C1B!important;
+}
+.addy h1 {	
+	font-size:1.1em;
+	font-weight:bold;
+	padding:0 0 2px 0;
+	margin:0;
+	/*
+	border-top:1px solid #1C1C1B;
+	*/
+}
+
+
+.addy p {
+	margin:0;
+	padding:0;
+	color: #5d5d5d;
+}
+
+.addy a {	
+color: #5d5d5d;
+}
+.addy a:hover {	
+color: #d3011c;
+text-decoration:none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
